// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FormInput with placeholder 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(33, 33, 33, 0.87)",
          "fontSize": 15,
          "fontWeight": "normal",
          "textAlign": "left",
        },
      ]
    }
  >
    Name
  </Text>
  <View
    style={
      Object {
        "marginBottom": 5,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 45,
            "marginBottom": 5,
            "marginTop": 10,
            "width": "100%",
          },
          Object {
            "borderColor": "rgba(33, 33, 33, 0.5)",
            "borderWidth": 0.9,
          },
          Object {
            "borderRadius": 15,
            "paddingHorizontal": 10,
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="placeholder"
        placeholderTextColor="rgba(33, 33, 33, 0.5)"
        rejectResponderTermination={true}
        style={
          Object {
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
</View>
`;

exports[`renders colored FormInput 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(33, 33, 33, 0.87)",
          "fontSize": 15,
          "fontWeight": "normal",
          "textAlign": "left",
        },
      ]
    }
  >
    Name
  </Text>
  <View
    style={
      Object {
        "marginBottom": 5,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 45,
            "marginBottom": 5,
            "marginTop": 10,
            "width": "100%",
          },
          Object {
            "borderColor": "rgba(33, 33, 33, 0.5)",
            "borderWidth": 0.9,
          },
          Object {
            "borderRadius": 15,
            "paddingHorizontal": 10,
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="rgba(33, 33, 33, 0.5)"
        rejectResponderTermination={true}
        style={
          Object {
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
</View>
`;

exports[`renders regular FormInput 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(33, 33, 33, 0.87)",
          "fontSize": 15,
          "fontWeight": "normal",
          "textAlign": "left",
        },
      ]
    }
  >
    Name
  </Text>
  <View
    style={
      Object {
        "marginBottom": 5,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 45,
            "marginBottom": 5,
            "marginTop": 10,
            "width": "100%",
          },
          Object {
            "borderColor": "rgba(33, 33, 33, 0.5)",
            "borderWidth": 0.9,
          },
          Object {
            "borderRadius": 15,
            "paddingHorizontal": 10,
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="rgba(33, 33, 33, 0.5)"
        rejectResponderTermination={true}
        style={
          Object {
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
</View>
`;
